<resources>
    <string name="app_name">SlateTestAssignment</string>
    <string name="title_activity_maps">Map</string>
    <string name="add_geofence">Add geofence</string>
    <string name="remove_geofence">Remove geofence</string>
    <string name="wifi">WIFI:</string>
    <string name="none">None</string>
    <string name="status">Status:</string>
    <string name="inside">Inside</string>
    <string name="radius">Radius</string>
    <string name="_200">200</string>
</resources>
